# ose-interlinear-viewer

./: .gitignore  LICENSE.md  README.md  app.icns  flextext.html  html.html  index.html  main.js  package-lock.json  package.json  package.json.txt  saveThisDocument.js  styles.css  sw.js  tsv.html  word-writer.html  xlingpaper.html
.githooks/: pre-commit
.github/workflows/: release-mac.yml  release.yml
Tools/: XLingPapSimpleInterlinearizer.html
docs/: ext-links.js  flextext.html  html.html  index.html  styles.css  sw.js  tsv.html  xlingpaper.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
