[package]
name = "ose-interlinear-viewer"
version = "2.0.0"
edition = "2021"

[lib]
name = "ose_interlinear_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
opener = "0.7"
rfd = { version = "0.15", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
